--- a/vitalconnect/src/index.css
+++ b/vitalconnect/src/index.css
@@ -1,7 +1,7 @@
 :root{
   --color-primary: #17726D;
-  --color-secundary: #616263;
-  --color-secundary-ligth: #D9D9D9;
+  --color-secondary: #616263;
+  --color-secondary-light: #D9D9D9;
   --color-success: #21BA39;
   --color-primary-strong: #173072;
   
