logo y barra de busqueda

--- a/vitalconnect/src/componentes/ButtonGroup/style.css
+++ b/vitalconnect/src/componentes/ButtonGroup/style.css
@@ -1,17 +1,18 @@
-h2{
-    text-align: center;
-    color:#17726d;
-    font-size: 55px;
-    font-weight: 300;
+h2 {
+  text-align: center;
+  color: #17726d;
+  font-size: 55px;
+  font-weight: 300;
+  margin: 1rem 0 2rem 0;
 }
-ul{
-    display:flex;
-    justify-content: space-evenly;
-    padding-left: 0;
+ul {
+  display: flex;
+  justify-content: space-evenly;
+  padding-left: 0;
 }
 
-li{
-    list-style-type:none;
-    width: 200px;
-    height: auto;
+li {
+  list-style-type: none;
+  width: 200px;
+  height: auto;
 }
