--- a/vitalconnect/src/componentes/assets/style.css
+++ b/vitalconnect/src/componentes/assets/style.css
@@ -1,25 +1,27 @@
-h4{
+h4 {
   color: #616263;
   font-family: Arial, Helvetica, sans-serif;
-  font-weight:500;
+  font-weight: 500;
 }
 .options-ciclo-vital {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-  }
-  
-  .options-ciclo-vital img{
-    height: 266.66px;
-    object-fit: cover;
-  }
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+}
 
-  .options-ciclo-vital:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    cursor: pointer;
-  }
-  
-  .container {
-    background-color: #d9d9d9;
-    padding: 2px 16px;
-    text-align: center;
-  }
+.options-ciclo-vital img {
+  height: 266.66px;
+  max-width: 200px;
+  object-fit: cover;
+  aspect-ratio: 200/267;
+}
+
+.options-ciclo-vital:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+
+.container {
+  background-color: #d9d9d9;
+  padding: 2px 16px;
+  text-align: center;
+}
