--- a/vitalconnect/src/componentes/ButtonGroup/style.css
+++ b/vitalconnect/src/componentes/ButtonGroup/style.css
@@ -1,18 +1,34 @@
-h2 {
+.container-button-group h2 {
   text-align: center;
   color: #17726d;
   font-size: 55px;
   font-weight: 300;
   margin: 1rem 0 2rem 0;
 }
-ul {
+.container-button-group ul {
   display: flex;
   justify-content: space-evenly;
   padding-left: 0;
 }
 
-li {
+.container-button-group li {
   list-style-type: none;
   width: 200px;
   height: auto;
 }
+
+.container-button-group nav{
+  display:flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.container-button-group nav ul{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: space-between;
+  margin: auto;
+}
+
