--- a/vitalconnect/src/index.css
+++ b/vitalconnect/src/index.css
@@ -4,15 +4,26 @@
   --color-secondary-light: #D9D9D9;
   --color-success: #21BA39;
   --color-primary-strong: #173072;
-  
 }
+
+#root{
+  display:flex;
+  flex-direction: column;
+}
+
 body, html {
   margin: 0;
   padding: 0;
   font-family: 'Arial', sans-serif;
 }
 
-
 * {
   box-sizing: border-box;
+}
+
+main{
+  width:1000px;
+  max-width: 90%;
+  margin: auto;
+  margin-bottom: 5rem;
 }
