--- a/vitalconnect/src/componentes/ButtonGroup/style.css
+++ b/vitalconnect/src/componentes/ButtonGroup/style.css
@@ -5,11 +5,6 @@
   font-weight: 300;
   margin: 1rem 0 2rem 0;
 }
-.container-button-group ul {
-  display: flex;
-  justify-content: space-evenly;
-  padding-left: 0;
-}
 
 .container-button-group li {
   list-style-type: none;
@@ -25,10 +20,12 @@
 }
 
 .container-button-group nav ul{
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
-  justify-content: space-between;
-  margin: auto;
+  justify-content: space-evenly;
+  margin: 0;
+  padding-inline-start: 0;
 }
 
