--- a/vitalconnect/src/componentes/NavBar/style.css
+++ b/vitalconnect/src/componentes/NavBar/style.css
@@ -35,7 +35,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 10px 0 10px;
+  padding: 10px;
 }
 
 .primerNavbar .img {
