--- a/vitalconnect/src/index.css
+++ b/vitalconnect/src/index.css
@@ -9,12 +9,15 @@
 #root{
   display:flex;
   flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
 
 body, html {
   margin: 0;
   padding: 0;
   font-family: 'Arial', sans-serif;
+  height: 100%;
 }
 
 * {
@@ -22,6 +25,6 @@ body, html {
 }
 
 main{
+  flex-grow:1;
   width:100%;
-  margin-bottom: 5rem;
 }
