--- a/vitalconnect/src/componentes/ButtonGroup/style.css
+++ b/vitalconnect/src/componentes/ButtonGroup/style.css
@@ -1,9 +1,13 @@
+.container-button-group {
+  margin: 1rem 0 2rem 0;
+}
+
 .container-button-group h2 {
   text-align: center;
   color: #17726d;
   font-size: 55px;
   font-weight: 300;
-  margin: 1rem 0 2rem 0;
+  margin: 0 0 2rem 0;
 }
 
 .container-button-group li {
@@ -12,14 +16,14 @@
   height: auto;
 }
 
-.container-button-group nav{
-  display:flex;
+.container-button-group nav {
+  display: flex;
   width: 100%;
   justify-content: center;
   align-items: center;
 }
 
-.container-button-group nav ul{
+.container-button-group nav ul {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
@@ -28,4 +32,3 @@
   margin: 0;
   padding-inline-start: 0;
 }
-
