--- a/vitalconnect/src/componentes/ScrollList/style.css
+++ b/vitalconnect/src/componentes/ScrollList/style.css
@@ -1,17 +1,22 @@
 .scroll-list-container {
-  width: 350px; /* ancho del contenedor */
-  height: 250px; /* altura del contenedor */
   border: 1px solid #000000; /*borde contenedor */
   overflow: hidden; /* Oculta el desbordamiento de la lista */
   background-color: #f0ebeb;
+  width: 100%;
+  max-width: 667px;
+  height: 50%;
+  max-height: 365px;
 }
 
 .scroll-list {
-  overflow-y: scroll; /* desplazamiento vertical */
-  max-height: 100%; /* altura max de la lista */
+  width: 100%;
+  max-width: 667px;
+  height: 100%;
+  max-height: 365px;
+  overflow-y: scroll; /* desplazamiento vertical */ /* altura max de la lista */
 }
 
-ul {
+.scroll-list-ul {
   list-style-type: none; /* Elimina los puntos de la lista*/
 }
 
