--- a/vitalconnect/src/index.css
+++ b/vitalconnect/src/index.css
@@ -1,22 +1,23 @@
-:root{
-  --color-primary: #17726D;
+:root {
+  --color-primary: #17726d;
   --color-secondary: #616263;
-  --color-secondary-light: #D9D9D9;
-  --color-success: #21BA39;
+  --color-secondary-light: #d9d9d9;
+  --color-success: #21ba39;
   --color-primary-strong: #173072;
 }
 
-#root{
-  display:flex;
+#root {
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
 }
 
-body, html {
+body,
+html {
   margin: 0;
   padding: 0;
-  font-family: 'Arial', sans-serif;
+  font-family: "Arial", sans-serif;
   height: 100%;
 }
 
@@ -24,7 +25,7 @@ body, html {
   box-sizing: border-box;
 }
 
-main{
-  flex-grow:1;
-  width:100%;
+main {
+  flex-grow: 1;
+  width: 100%;
 }
