--- a/vitalconnect/src/componentes/Info/style.css
+++ b/vitalconnect/src/componentes/Info/style.css
@@ -1,10 +1,10 @@
 .info-shape {
   width: 50%;
   margin: 30px;
-  background-color: var(--color-secondary);
+  background-color: #d9d9d9;
   border: 3px solid;
   border-radius: 15px;
-  color: var(--color-secondary-light);
+  color: #121212;
   padding: 15px;
   display: flex;
   flex-direction: column;
@@ -12,7 +12,7 @@
 }
 
 .info-daily {
-  color: var(--color-secondary-light);
+  color: #121212;
   font-size: 36px;
   border-bottom: 2px solid #fff;
   margin-bottom: 0;
