--- a/vitalconnect/src/componentes/Popupvacunas/style.css
+++ b/vitalconnect/src/componentes/Popupvacunas/style.css
@@ -8,15 +8,15 @@
   display: flex;
   justify-content: center; /* Centra horizontalmente */
   align-items: center; /* Centra verticalmente */
+  overflow: auto;
 }
+
 .popup {
   background-color: white;
   padding: 20px;
   border-radius: 15px;
-  margin-top: 10px;
-  text-align: center;
+  margin: auto;
   width: 51%;
-  height: 70%;
   border: 2px solid #17726d;
   position: relative;
 }
