--- a/vitalconnect/src/pages/Localizacion/style.css
+++ b/vitalconnect/src/pages/Localizacion/style.css
@@ -35,4 +35,14 @@ h1 {
 
 .button {
   text-align: center;
+  margin: 8px;
+  border-radius: 8px;
+  height: 30px;
+  border: none;
+  background-color: #21ba39;
+  color: var(--color-secondary-light);
+}
+
+.button:hover {
+  cursor: pointer;
 }
