--- a/vitalconnect/src/pages/Vacunas/style.css
+++ b/vitalconnect/src/pages/Vacunas/style.css
@@ -1,11 +1,11 @@
-h1 {
+.vacunas-page-h1 {
   text-align: center;
   margin: 0;
   color: #17726d;
   font-size: 35px;
 }
 
-h2 {
+.vacunas-page-h2 {
   text-align: center;
   margin: 0;
   margin-bottom: 15px;
@@ -14,19 +14,52 @@ h2 {
   font-size: 30px;
 }
 
-.body {
+.vacunas-page-body {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
 }
 
-.select {
-  margin-right: 15px;
-  border-radius: 5px;
-  width: 100px;
+.vacunas-page-img,
+.vacunas-page-filter {
+  width: 50%;
+  margin: 20px;
 }
 
-.button {
-  background-color: #17726d;
-  border-radius: 5px;
+.vacunas-page-select,
+.vacunas-page-button {
+  margin: 8px;
+  border-radius: 8px;
+  height: 30px;
+  border: none;
+}
+
+.vacunas-page-select {
+  margin-left: 0;
+  width: 200px;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.vacunas-page-button {
+  background-color: #21ba39;
+  color: var(--color-secondary-light);
+}
+
+.vacunas-page-button:hover {
+  cursor: pointer;
+}
+
+/*Media query para cuando la imagen se empiece a achicar*/
+/*cuando eso pase, entonces ocultar la imagen y que el filtro tome todo el ancho*/
+
+@media screen and (max-width: 670px) {
+  .vacunas-page-img {
+    display: none;
+  }
+
+  .vacunas-page-filter {
+    width: 90%;
+    margin: auto;
+    padding-bottom: 3rem;
+  }
 }
