--- a/vitalconnect/src/componentes/NavBar/style.css
+++ b/vitalconnect/src/componentes/NavBar/style.css
@@ -1,5 +1,3 @@
-
-
 .nav ul {
   list-style-type: none;
   margin: 0;
@@ -22,7 +20,7 @@
 
 .nav li a:hover {
   cursor: pointer;
-  text-decoration: underline;
+  /* text-decoration: underline; */
   /* background-color: #173072; */
 }
 
@@ -77,7 +75,7 @@
   height: auto;
 } */
 
-.segundoNavbar{
+.segundoNavbar {
   height: 110px;
   background-color: var(--color-primary);
   display: flex;
@@ -85,7 +83,7 @@
   justify-content: center;
 }
 
-.segundoNavbar ul{
+.segundoNavbar ul {
   display: flex;
   width: 100%;
   justify-content: space-evenly;
@@ -110,8 +108,8 @@
   height: auto;
 }
 
-.segundoNavbar li:hover{
-  text-decoration: underline;
+.segundoNavbar li:hover {
+  /* text-decoration: underline; */
   cursor: pointer;
 }
 
